--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "php": ">=5.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.3"
+    "phpunit/phpunit": "~4.3",
+    "ruflin/elastica": "~2.2"
   },
   "extra": {
     "branch-alias": {
