--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "gdbots/query-parser",
+  "homepage": "https://github.com/gdbots/query-parser-php",
   "description": "Php library that converts search queries into terms, phrases, hashtags, mentions, etc.",
   "type": "library",
   "license": "Apache-2.0",
@@ -10,11 +11,6 @@
     "phpunit/phpunit": "~4.3",
     "ruflin/elastica": "~1.4.3"
   },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "0.1.x-dev"
-    }
-  },
   "autoload": {
     "psr-4": {
       "Gdbots\\QueryParser\\": "src"
@@ -23,6 +19,11 @@
   "autoload-dev": {
     "psr-4": {
       "Gdbots\\Tests\\QueryParser\\": "tests"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.1.x-dev"
     }
   }
 }
