--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "type": "library",
   "license": "Apache-2.0",
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+
   },
   "require-dev": {
     "phpunit/phpunit": "~4.3",
