--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
   "type": "library",
   "license": "Apache-2.0",
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "gdbots/common": "~0.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.3",
-    "ruflin/elastica": "~1.4.3"
+    "phpunit/phpunit": "~4.3"
   },
   "autoload": {
     "psr-4": {
