--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "gdbots/common": "~0.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.3"
+    "phpunit/phpunit": "~4.3",
+    "ruflin/elastica": "~1.4.3"
   },
   "autoload": {
     "psr-4": {
