--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
   "type": "library",
   "license": "Apache-2.0",
   "require": {
-    "php": ">=5.4",
+    "php": ">=7.1",
     "gdbots/common": "~0.1|~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.3",
-    "ruflin/elastica": "~3.2"
+    "phpunit/phpunit": "~6.4",
+    "ruflin/elastica": "~5.3"
   },
   "autoload": {
     "psr-4": {
@@ -22,9 +22,12 @@
       "Gdbots\\Tests\\QueryParser\\": "tests"
     }
   },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
+  },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.2.x-dev"
+      "dev-master": "0.3.x-dev"
     }
   }
 }
