--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "require": {
     "php": ">=7.1",
-    "gdbots/common": "~0.1|~1.0"
+    "gdbots/common": "~0.1 || ^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.4",
