--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     "php": ">=7.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.1",
-    "ruflin/elastica": "^7.0.0-beta.4"
+    "phpunit/phpunit": "^9.2",
+    "ruflin/elastica": "^7.0"
   },
   "autoload": {
     "psr-4": {
